Migrated Old Backend Files

--- a/server/package.json
+++ b/server/package.json
@@ -3,9 +3,19 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "keywords": [],
+  "description": "",
+  "dependencies": {
+    "csv-parser": "^3.0.0",
+    "express": "^4.21.1",
+    "express-rate": "^0.0.1",
+    "express-rate-limit": "^7.4.1",
+    "express-validator": "^7.2.0",
+    "nodemon": "^3.1.7"
+  }
 }
