--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "express-validator": "^7.2.0",
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.1",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "strip-bom-stream": "^5.0.0"
   }
 }
