--- a/server/package.json
+++ b/server/package.json
@@ -11,12 +11,14 @@
   "keywords": [],
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-rate": "^0.0.1",
     "express-rate-limit": "^7.4.1",
     "express-validator": "^7.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.1",
     "nodemon": "^3.1.7",
